# evalkit

./: .gitignore  README.md  smoke_test.py
core/: pyproject.toml
core/evalkit/: __init__.py  cli.py  dataset.py  report.py  runner.py  types.py
core/evalkit/judges/: __init__.py  base.py  composite.py  contains.py  exact_match.py  llm_judge.py
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
dashboard/app/api/diff/: route.ts
dashboard/app/api/runs/: route.ts
dashboard/app/api/runs/[id]/: route.ts
dashboard/app/compare/: page.tsx
dashboard/app/runs/[id]/: page.tsx
dashboard/components/: CaseCard.tsx  RunPicker.tsx  ScoreBar.tsx  StatusBadge.tsx
dashboard/lib/: diff.ts  format.ts  load.ts  types.ts
examples/turkish-legal-rag/: FINDINGS.md  dataset.yaml  run_eval.py
runs/76f17871fb40/: results.json  summary.md
runs/969f34941021/: results.json  summary.md
runs/d2a328aa0843/: results.json  summary.md
tools/: collect_rag_outputs.py
