[project]
name = "evalkit"
version = "0.1.0"
description = "LLM evaluation framework with structured rubrics, regression detection, and run comparison"
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Müge Güçlü", email = "" }]
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
evalkit = "evalkit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evalkit"]
